# tiago_planning_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md
ROSPlan/rosplan_dispatch_msgs/: CMakeLists.txt
ROSPlan/rosplan_dispatch_msgs/msg/: ActionFeedback.msg  SensorDispatch.msg
ROSPlan/rosplan_planning_msgs/: CMakeLists.txt  package.xml
planning_node/: CMakeLists.txt  package.xml
planning_node/files/yaml/: domain.yaml
planning_node/include/: common.h
planning_node/include/plan_diapatch/: XYZPlanDispatch.h
planning_node/include/planning_node/: planner.h
planning_node/include/xyz_action_interface/: RPActionInterface.h  XYZActionInterface.h
planning_node/include/xyz_knowledge_base/: KnowledgeBase.h  XYZKnowledgeBase.h  data_types.h  parser.h  planner.h
planning_node/launch/: xyz_knowledge_base.launch
planning_node/src/plan_dispatch/: XYZPlanDIspatch.cpp
planning_node/src/planning_node/: planner.cpp
planning_node/src/xyz_action_interface/: RPActionInterface.cpp  XYZActionInterface.cpp
planning_node/src/xyz_knowledge_base/: KnowledgeBase.cpp  KnowledgeComparitor.cpp  XYZKnowledgeBase.cpp  data_types.cpp  parser.cpp  planner.cpp
planning_node/tests/: TestParser.cpp
src/ROSPlan/rosplan_dispatch_msgs/: CMakeLists.txt  package.xml
src/ROSPlan/rosplan_dispatch_msgs/action/: NonBlockingDispatch.action
src/ROSPlan/rosplan_dispatch_msgs/msg/: EsterelPlanNode.msg  SensorDispatch.msg
src/ROSPlan/rosplan_dispatch_msgs/srv/: OnlineDispatchService.srv
src/ROSPlan/rosplan_knowledge_msgs/: CMakeLists.txt  package.xml
src/ROSPlan/rosplan_knowledge_msgs/msg/: DomainAssignment.msg  DomainInequality.msg  DomainOperator.msg  ExprBase.msg  KnowledgeItem.msg  ProbabilisticEffect.msg
src/ROSPlan/rosplan_knowledge_msgs/srv/: GetAttributeService.srv  GetDomainAttributeService.srv  GetDomainOperatorDetailsService.srv  GetDomainOperatorService.srv  GetDomainPredicateDetailsService.srv  GetMetricService.srv  KnowledgeQueryService.srv  KnowledgeUpdateService.srv  KnowledgeUpdateServiceArray.srv
src/ROSPlan/rosplan_planning_msgs/: CMakeLists.txt  package.xml
src/ROSPlan/rosplan_planning_msgs/srv/: ParsingStringEsterel.srv  ParsingStringSimple.srv
src/planning_node/: CMakeLists.txt  package.xml
src/planning_node/include/: common.h  mempool.h
src/planning_node/launch/: pddl_knowledge_base.launch  xyz_plan_dispatch.launch
src/tiago_demo_planning/: CMakeLists.txt  package.xml
src/tiago_demo_planning/config/: waypoints.yaml
src/tiago_demo_planning/launch/: bak_planning.launch  planning.launch  planning_2objs.launch
src/tiago_demo_planning/pddl/: domain.pddl  domain_2objs.pddl  problem.pddl  problem_2objs.pddl
src/tiago_demo_planning/scripts/: run_demo.py
src/tiago_dependencies/: .gitignore
src/tiago_dependencies/dynamic_introspection/: CMakeLists.txt
src/tiago_dependencies/head_action/: CMakeLists.txt
src/tiago_dependencies/hey5_description/: CMakeLists.txt
src/tiago_dependencies/pal_gazebo_plugins/: CMakeLists.txt
src/tiago_dependencies/pal_gazebo_worlds/: CMakeLists.txt
src/tiago_dependencies/pal_hardware_gazebo/: CMakeLists.txt
src/tiago_dependencies/pal_hardware_interfaces/: CMakeLists.txt
src/tiago_dependencies/pal_msgs/pal_multirobot_msgs/: CMakeLists.txt
src/tiago_dependencies/pal_navigation_sm/: CMakeLists.txt
src/tiago_dependencies/pal_python/: CMakeLists.txt
src/tiago_dependencies/pal_wsg_gripper/pal_wsg_gripper_description/: CMakeLists.txt
src/tiago_dependencies/robot_pose/: CMakeLists.txt
src/tiago_dependencies/roboticsgroup_gazebo_plugins/: CMakeLists.txt
src/tiago_dependencies/rviz_plugin_covariance/: CMakeLists.txt
src/tiago_dependencies/simple_grasping_action/: CMakeLists.txt
src/tiago_dependencies/simple_models_robot/simple_models_description/: CMakeLists.txt
src/tiago_dependencies/tf_lookup/: CMakeLists.txt
src/tiago_dependencies/tiago_description_calibration/: CMakeLists.txt
src/tiago_dependencies/tiago_moveit_config/: CMakeLists.txt
src/tiago_dependencies/tiago_navigation/tiago_maps/: CMakeLists.txt
src/tiago_dependencies/tiago_robot/tiago_bringup/: CMakeLists.txt
src/tiago_dependencies/tiago_robot/tiago_bringup/launch/: play_motion.launch
src/tiago_dependencies/tiago_serving_demo/: CMakeLists.txt  package.xml
src/tiago_serving_demo/: CMakeLists.txt  package.xml
src/tiago_serving_demo/config/: laser_filter_config.yaml  teb_local_planner_params_waffle_pi.yaml  waypoints.yaml
src/tiago_serving_demo/launch/: planning.launch
tiago_serving_demo/: CMakeLists.txt  package.xml
tiago_serving_demo/config/: waypoints.yaml
tiago_serving_demo/include/ActionInterface/: Dummy.h  GotoWaypoint.h  WatchTable.h
tiago_serving_demo/launch/: planning.launch
tiago_serving_demo/src/ActionInterface/: Dummy.cpp  GotoWaypoint.cpp  WatchTable.cpp
(+338 files in other folders)
