<?xml version="1.0"?>
<package>
  <name>xyz_planning_msgs</name>
  <version>0.0.0</version>
  <description>planning loop messages for the ROSPlan framework.</description>
  <maintainer email="yzxue@nudt.edu.cn">Yuanzhou Xue</maintainer>
  <license>BSD</license>
  <url type="website">https://gitee.com/yuanzhouxue/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>xyz_dispatch_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>xyz_dispatch_msgs</run_depend>


  <export></export>
</package>
